# LightHostReforge

./: .gitignore  CMakeLists.txt  readme.md  readme_zh.md  third_party
Source/: AudioSettingsComponent.cpp  AudioSettingsComponent.hpp  AudioStream.hpp  HostStartup.cpp  IconMenu.cpp  IconMenu.hpp  LoopbackCaptureDevice.hpp  NoneAudioDevice.hpp  PluginChain.cpp  PluginChain.hpp  PluginWindow.cpp  PluginWindow.h  PresetManager.cpp  PresetManager.hpp
